# mini_shop

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
core/: config.py  database.py  di.py  filters.py  inmemory.py  metrics.py  metrics_loader.py  middleware.py  notifier.py  states.py  utils.py
misc/: __init__.py  logger_initializer.py
monitoring/: dashboard_bot.json  prometheus.yml
routers/: __init__.py  admin_router.py  start_router.py  user_router.py
template/: markup.py  message.py
