[project]
name = "test-shop"
version = "0.1.0"
description = ""
authors = [
    {name = "NRx",email = "insert@funtime.network"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "redis (>=4.5.4)",
    "pydantic (>=2.4.1,<2.12)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "aiogram (>=3.22,<4.0)",
    "xlsxwriter (>=3.2.9,<4.0.0)",
    "prometheus-client (>=0.23.1,<0.24.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
